# tickets

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: run_tests.yml
app/: __init__.py  __main__.py
app/infrastructure/discord/: base_url.py
app/infrastructure/jira/: authentication.py  base_url.py  basic_url.py  controller.py  services.py
app/utilities/: password_generator.py
