[tool.poetry]
name = "tickets"
version = "0.1.0"
description = ""
authors = ["Ariel Amaral <amaral.ariel95@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
flask-restx = "1.0.0"
flask = "2.3.3"
jira = "^3.0.1"
gunicorn = "^20.1.0"
requests = "^2.26.0"
mysql-connector-python = "^8.0.28"
nltk = "^3.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"